--- a/states.yml
+++ b/states.yml
@@ -1,65 +1,65 @@
 ---
 - name: Northland
-  country_id: "145"
-  id: "101"
+  country_id: '145'
+  id: '101'
   abbr: NTL
 - name: Auckland
-  country_id: "145"
-  id: "102"
+  country_id: '145'
+  id: '102'
   abbr: AUK
 - name: Waikato
-  country_id: "145"
-  id: "103"
+  country_id: '145'
+  id: '103'
   abbr: WKO
-  - name: Bay of Plenty
-  country_id: "145"
-  id: "104"
+- name: Bay of Plenty
+  country_id: '145'
+  id: '104'
   abbr: BOP
-  - name: Gisbourne
-  country_id: "145"
-  id: "105"
+- name: Gisbourne
+  country_id: '145'
+  id: '105'
   abbr: GIS
-  - name: Hawke's Bay
-  country_id: "145"
-  id: "106"
+- name: Hawke's Bay
+  country_id: '145'
+  id: '106'
   abbr: HKB
-  - name: Taranaki
-  country_id: "145"
-  id: "107"
+- name: Taranaki
+  country_id: '145'
+  id: '107'
   abbr: HKB
-  - name: Manawatu-Wanganui
-  country_id: "145"
-  id: "108"
+- name: Manawatu-Wanganui
+  country_id: '145'
+  id: '108'
   abbr: MWT
-  - name: Wellington
-  country_id: "145"
-  id: "109"
+- name: Wellington
+  country_id: '145'
+  id: '109'
   abbr: WGN
-  - name: Tasman
-  country_id: "145"
-  id: "110"
+- name: Tasman
+  country_id: '145'
+  id: '110'
   abbr: TAS
-  - name: Nelson
-  country_id: "145"
-  id: "111"
+- name: Nelson
+  country_id: '145'
+  id: '111'
   abbr: NSN
-  - name: Marlborough
-  country_id: "145"
-  id: "112"
+- name: Marlborough
+  country_id: '145'
+  id: '112'
   abbr: MBH
-  - name: West Coast
-  country_id: "145"
-  id: "113"
+- name: West Coast
+  country_id: '145'
+  id: '113'
   abbr: WTC
-  - name: Canterbury
-  country_id: "145"
-  id: "114"
+- name: Canterbury
+  country_id: '145'
+  id: '114'
   abbr: CAN
-  - name: Otago
-  country_id: "145"
-  id: "115"
+- name: Otago
+  country_id: '145'
+  id: '115'
   abbr: OTA
-  - name: Southland
-  country_id: "145"
-  id: "116"
+- name: Southland
+  country_id: '145'
+  id: '116'
   abbr: STL
