Fixed Taranaki abbreviation

--- a/states.yml
+++ b/states.yml
@@ -26,7 +26,7 @@
 - name: Taranaki
   country_id: '145'
   id: '107'
-  abbr: HKB
+  abbr: TKI
 - name: Manawatu-Wanganui
   country_id: '145'
   id: '108'
